force-app/src/objects/TR1__Job_Leads__c.object
<CustomObject>
    <fields>
        <fullName>TR1__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__CallList__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Call List</label>
        <referenceTo>TR1__Call_List__c</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>JobLeads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Competor__c</fullName>
        <label>Firms Engaged</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Adecco</fullName>
                </value>
                <value>
                    <fullName>Ajilon</fullName>
                </value>
                <value>
                    <fullName>CFS</fullName>
                </value>
                <value>
                    <fullName>Kelly</fullName>
                </value>
                <value>
                    <fullName>KForce</fullName>
                </value>
                <value>
                    <fullName>Manpower</fullName>
                </value>
                <value>
                    <fullName>Robert Half</fullName>
                </value>
                <value>
                    <fullName>Staff Mark</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Volt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>TR1__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>TR1__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Converted_Job__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Converted Job</label>
        <referenceTo>TR1__Job__c</referenceTo>
        <relationshipLabel>Job Leads</relationshipLabel>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Job_Description__c</fullName>
        <label>Job Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>TR1__Job__c</fullName>
        <label>Job</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TR1__Lead_Source__c</fullName>
        <label>Lead Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CareerBuilder</fullName>
                </value>
                <value>
                    <fullName>Craigslist</fullName>
                </value>
                <value>
                    <fullName>Indeed</fullName>
                </value>
                <value>
                    <fullName>Monster</fullName>
                </value>
                <value>
                    <fullName>Referral</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Marketing__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Marketing</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Job_Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Referred_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Referred By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Job Leads (Referred By)</relationshipLabel>
        <relationshipName>Job_Leads1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TR1__Stage__c</fullName>
        <label>Stage</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Prospecting</fullName>
                </value>
                <value>
                    <fullName>Needs Analysis</fullName>
                </value>
                <value>
                    <fullName>Value Proposition</fullName>
                </value>
                <value>
                    <fullName>Pricing Quote</fullName>
                </value>
                <value>
                    <fullName>Won</fullName>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                    <default>true</default>
                    <label>Open</label>
                </value>
                <value>
                    <fullName>Lost</fullName>
                </value>
                <value>
                    <fullName>Converted</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TR1__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Consulting</fullName>
                </value>
                <value>
                    <fullName>Permanent</fullName>
                </value>
                <value>
                    <fullName>Retained</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Job Lead</label>
    <listViews>
        <fullName>TR1__All</fullName>
        <columns>NAME</columns>
        <columns>TR1__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>JL-{MM}{DD}{YYYY}-{00}</displayFormat>
        <label>Job Leads Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Job Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>